Finished first section

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
             </div>
 
             <h1 class="headline"><b>Golden Dreams:</b> Majestic Bliss Signature Collection</h1>
+            
+        </div>
+        <div class="button-right site-content">
             <button class="primary-button">Shop All</button>
         </div>
-        
     </section>
 </body>
 </html>
