Starting second section

--- a/index.html
+++ b/index.html
@@ -19,11 +19,21 @@
             </div>
 
             <h1 class="headline"><b>Golden Dreams:</b> Majestic Bliss Signature Collection</h1>
-            
+            <div class="button-right">
+                <button class="primary-button">Shop All</button>
+            </div>
         </div>
-        <div class="button-right site-content">
-            <button class="primary-button">Shop All</button>
+
+    </section>
+
+
+    <section class="second-sectiont">
+        <div class="overlap-container site-content">
+            <img src="./images/woman-image.png" alt="woman-image" class="woman-image">
+            <img src="./images/necklace.png" alt="necklace" class="necklace">
+            <img src="./images/bracelet.png" alt="bracelet" class="bracelet">
         </div>
     </section>
+
 </body>
 </html>
