Adding prices and names

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kaisei+Decol:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <title>Majestic Bliss</title>
 </head>
 <body>
@@ -29,9 +30,19 @@
 
     <section class="second-sectiont">
         <div class="overlap-container site-content">
-            <img src="./images/woman-image.png" alt="woman-image" class="woman-image">
-            <img src="./images/necklace.png" alt="necklace" class="necklace">
-            <img src="./images/bracelet.png" alt="bracelet" class="bracelet">
+            <div class="woman-image">
+                <img src="./images/woman-image.png" alt="woman-image">
+            </div>
+            <div class="necklace">
+                <img src="./images/necklace.png" alt="necklace">
+                <h2 class="product-name">18k Chain Necklace</h2>
+                <p class="text">From $45.00</p>
+            </div>
+            <div class="bracelet">
+                <img src="./images/bracelet.png" alt="bracelet">
+                <h2 class="product-name">Bond Bracelet</h2>
+                <p class="text">From $32.00</p>
+            </div>
         </div>
     </section>
 
