Finished second section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     </section>
 
 
-    <section class="second-sectiont">
+    <section class="second-section">
+        
+        <img src="./images/Small-circle.png" alt="decorative circle" class="small-circle">
         <div class="overlap-container site-content">
             <div class="woman-image">
                 <img src="./images/woman-image.png" alt="woman-image">
@@ -44,6 +46,9 @@
                 <p class="text">From $32.00</p>
             </div>
         </div>
+
+        <img src="./images/Big-circle.png" alt="decorative circle" class="big-circle">
+        
     </section>
 
 </body>
